--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ font-weight: 700;
     margin: 30px 0px;
     position: relative;
 }
-.input
+.input {
     width: 90%;
     height: 100%;
     background: transparent;
