--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html{
     scroll-padding-top: 60px;
 }
 body{
-
+    background-color: #020D0D;
 }
 .font-family{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
