--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ main .card:hover{
     background-size: cover;
 }
 .main-project .card:nth-child(3){
-    background-image: url(project-1.png);
+    background-image: url(project-3.jpeg);
     background-size: cover;
 }
 
